# config

./: .gitignore  .gitmodules  windows_generate_x64.bat
src/: CMakeLists.txt
src/common/: CMakeLists.txt  LogHandler.cpp  LogHandler.h  Macro.h
src/configure/: CMakeLists.txt  configNode.cpp  configNode.h
src/platform/: CMakeLists.txt  FileSystemPlatform.h  FileSystem_Windows.cpp  FileSystem_Windows.h
src/submodules/: CMakeLists.txt
src/submodules/assure/: .gitignore  CMakeLists.txt  README.md  windows_generate_x64.bat
src/submodules/assure/src/: CMakeLists.txt
src/submodules/assure/src/assure/: CMakeLists.txt  assertInfo.cpp  assertInfo.h  assure.h  assureConfig.cpp  assureConfig.h  assureException.h  assureHelp.cpp  assureHelp.h  assureMacro.h  assureSession.cpp  assureSession.h  assureTestCase.cpp  assureTestCase.h  assure_macro.h
src/submodules/assure/tests/: CMakeLists.txt  assureMacroTests.cpp  main.cpp
src/submodules/timeUtils/: .gitignore  .gitmodules  CMakeLists.txt  README.md  mac_generate_x64.sh
src/submodules/timeUtils/src/: CMakeLists.txt
src/submodules/timeUtils/src/submodules/: CMakeLists.txt
src/submodules/timeUtils/src/timeutils/: CMakeLists.txt  Duration.cpp  Duration.h  LogHandler.cpp  LogHandler.h  Macro.h  TimeFormat.cpp  TimeFormat.h  TimeSimulator.cpp  TimeSimulator.h  WallClock.cpp  WallClock.h  timeFunction.cpp  timeFunction.h
src/submodules/timeUtils/tests/: CMakeLists.txt  DurationTests.cpp  WallClockTests.cpp
tests/: CMakeLists.txt  ConfigureTests.cpp  main.cpp
